Fun with media queries. The login link gets lost if the screen is too small due to fixed position of top bar. When the width of the document drops below 1024, float the active links to the left.

--- a/style.scss
+++ b/style.scss
@@ -706,3 +706,9 @@ img {
 /* Hide the "Disable rich-text link" */
 .wysiwyg-toggle-wrapper {
   display: none; }
+
+@media screen and (max-width: 1024px) {
+  #top-bar .active-links {
+    float: left;
+    margin-left: 50px; }
+}
